--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div style="text-align:center">
   <h1>Welcome to {{ title }}!</h1>
 </div>
-<app-testapp> </app-testapp>
-<course-app></course-app>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>>
 <div id="mainCal"></div>
