--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,5 +26,10 @@
         >Create</a
       >
     </li>
+    <li class="navbar-item">
+      <a class="nav-link" [routerLink]="['user']" routerLinkActive="active"
+        >User</a
+      >
+    </li>
   </ul>
 </div>
