--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <h1>Welcome to {{ title }}!</h1>
 </div>
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>>
+<router-outlet></router-outlet>
 <div id="mainCal"></div>
