--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,23 +1,67 @@
-<form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" novalidate>
-  <label for="username">username</label>
-  <input
-    (ngModel)="(username)"
-    name="username"
-    id="username"
-    type="text"
-    required
-    placeholder="User
-  name ..."
-  />
-  <label for="password"> password</label>
-  <input
-    (ngModel)="(password)"
-    name="password"
-    id="password"
-    type="password"
-    required
-    placeholder="password ..."
-  />
-  <button type="submit">Login</button>
-  <button (click)="cancel()" type="button">Cancel</button>
-</form>
+<h1>Login</h1>
+<div class="col-md-4">
+  <form
+    #loginForm="ngForm"
+    (ngSubmit)="login(loginForm.value)"
+    autocomplete="off"
+    novalidate
+  >
+    <div class="form-group">
+      <label for="username">User Name:{{ username }}</label>
+      <input
+        (ngModel)="(username)"
+        name="username"
+        id="username"
+        type="text"
+        class="form-control"
+        required
+        placeholder="User Name..."
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input
+        (ngModel)="(password)"
+        name="password"
+        id="password"
+        type="text"
+        class="form-control"
+        required
+        placeholder="Password..."
+      />
+    </div>
+    <button (click)="cancel()" type="button" class="btn btn-primary">
+      Cancel
+    </button>
+  </form>
+</div>
+
+loginForm.valid {{ loginForm.valid }} <br />
+loginForm.invalid {{ loginForm.invalid }} <br />
+loginForm.dirty {{ loginForm.dirty }} <br />
+loginForm.pristine {{ loginForm.pristine }} <br />
+loginForm.submitted {{ loginForm.submitted }} <br />
+loginForm.touched {{ loginForm.touched }} <br />
+loginForm.untouched {{ loginForm.untouched }} <br />
+
+loginForm.controls.username.valid {{ loginForm.controls.username.valid }} <br />
+loginForm.controls.username.invalid {{ loginForm.controls.username.invalid }}
+<br />
+loginForm.controls.username.dirty {{ loginForm.controls.username.dirty }} <br />
+loginForm.controls.username.pristine {{ loginForm.controls.username.pristine }}
+<br />
+loginForm.controls.username.touched {{ loginForm.controls.username.touched }}
+<br />
+loginForm.controls.username.untouched
+{{ loginForm.controls.username.untouched }} <br />
+
+loginForm.controls.password.valid {{ loginForm.controls.password.valid }} <br />
+loginForm.controls.password.invalid {{ loginForm.controls.password.invalid }}
+<br />
+loginForm.controls.password.dirty {{ loginForm.controls.password.dirty }} <br />
+loginForm.controls.password.pristine {{ loginForm.controls.password.pristine }}
+<br />
+loginForm.controls.password.touched {{ loginForm.controls.password.touched }}
+<br />
+loginForm.controls.password.untouched
+{{ loginForm.controls.password.untouched }} <br />
