--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,9 +39,22 @@
     <div class="navbar-header navbar-right">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['user']" routerLinkActive="active"
-            >User</a
+          <a
+            *ngIf="!authService.isAuthenticated()"
+            class="nav-link"
+            [routerLink]="['user/login']"
+            routerLinkActive="active"
           >
+            Login
+          </a>
+          <a
+            *ngIf="authService.isAuthenticated()"
+            class="nav-link"
+            [routerLink]="['user']"
+            routerLinkActive="active"
+          >
+            Welcome {{ authService.currentUser.firstName }}
+          </a>
         </li>
       </ul>
     </div>
