--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -8,6 +8,13 @@
   >
     <div class="form-group">
       <label for="username">User Name:{{ username }}</label>
+      <em
+        *ngIf="
+          loginForm.controls.username?.invalid &&
+          (loginForm.controls.username?.touched || mouseOverLogin)
+        "
+        >required</em
+      >
       <input
         (ngModel)="(username)"
         name="username"
@@ -20,6 +27,13 @@
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
+      <em
+        *ngIf="
+          loginForm.controls.password?.invalid &&
+          (loginForm.controls.password?.touched || mouseOverLogin)
+        "
+        >required</em
+      >
       <input
         (ngModel)="(password)"
         name="password"
@@ -30,6 +44,18 @@
         placeholder="Password..."
       />
     </div>
+    <span
+      (mouseenter)="mouseOverLogin = true"
+      (mouseleave)="mouseOverLogin = false"
+    >
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="loginForm.invalid"
+      >
+        Login
+      </button>
+    </span>
     <button (click)="cancel()" type="button" class="btn btn-primary">
       Cancel
     </button>
@@ -65,3 +91,5 @@ loginForm.controls.password.touched {{ loginForm.controls.password.touched }}
 <br />
 loginForm.controls.password.untouched
 {{ loginForm.controls.password.untouched }} <br />
+
+mouseOverLogin {{ mouseOverLogin }}
