--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,3 +1,54 @@
-<p>
-  profile works!
-</p>
+<div>
+  <h1>Edit Profile</h1>
+  <hr />
+  <div class="col-md-4">
+    <form
+      [formGroup]="profileForm"
+      (ngSubmit)="saveProfile(profileForm.value)"
+      autocomplete="off"
+      novalidate
+    >
+      <div class="form-group" [ngClass]="{ error: !validateFirstName() }">
+        <label>First Name</label>
+        <em *ngIf="!validateFirstName() && firstName.errors.required"
+          >REQUIRED</em
+        >
+        <em *ngIf="!validateFirstName() && firstName.errors.pattern">
+          Name cannot start with a letter</em
+        >
+        <input
+          formControlName="firstName"
+          id="firstName"
+          name="firstName"
+          type="text"
+          class="form-control"
+          placeholder="First Name..."
+        />
+      </div>
+      <div class="form-group" [ngClass]="{ error: !validateLastName() }">
+        <label>Last Name</label>
+        <em *ngIf="!validateLastName() && lastName.errors.required">
+          REQUIRED</em
+        >
+        <em *ngIf="!validateLastName() && lastName.errors.restrictedWords">
+          Must not include: {{ lastName.errors.restrictedWords }}
+        </em>
+        <input
+          formControlName="lastName"
+          id="lastName"
+          name="lastName"
+          type="text"
+          class="form-control"
+          placeholder="Last Name..."
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="reset" class="btn btn-primary">
+        Reset
+      </button>
+      <button (click)="cancel()" type="button" class="btn btn-primary">
+        Cancel
+      </button>
+    </form>
+  </div>
+</div>
