--- a/src/app/course/course-item/course-item.component.html
+++ b/src/app/course/course-item/course-item.component.html
@@ -1,33 +1,48 @@
 <div class="course-item card">
-  <div [ngStyle]="{ 'font-size': fontSizeSet() }">
-    Course name: {{ course1?.name }}
-  </div>
-  <div [ngClass]="{ green: course1?.instructor, red: true, underline: true }">
-    Instructor name: {{ course1?.instructor ? course1?.instructor : "TBA" }}
-  </div>
-  <div *ngIf="course1?.instructor; else elseBlock">
-    Instructor name:
-    {{ course1?.instructor }}
-  </div>
-  <ng-template #elseBlock>Instructor to be determined</ng-template>
-  <div>
-    Max students:{{ course1?.size }}
-    <span [ngSwitch]="course1?.size">
-      <span *ngSwitchCase="1 - 3">Limited Availability</span>
-      <span *ngSwitchCase="12"> Open to All</span>
-      <span *ngSwitchDefault>Normal Amount</span>
-    </span>
-    Total hours: {{ course1?.hours }}
-    <span *ngIf="course1?.hours">
-      Total minutes:
-      {{ course1.hours * 60 }}</span
-    >
-  </div>
-  <div *ngIf="course1?.movie">
-    Favorite Movie: {{ course1.movie["favorite movie"] }}
-    <img [src]="course1.movie.image" />
-  </div>
-  <a [routerLink]="['../courses/' + course1.id]">More details</a>
-  <button (click)="handleClick()">Click me!</button>
-  <div class="cal" [id]="'course' + course1?.id"></div>
+  <collapsible-well>
+    <div well-title>
+      <div [ngStyle]="{ 'font-size': fontSizeSet() }">
+        Course name: {{ course1?.name | uppercase }}
+      </div>
+    </div>
+    <div well-body>
+      <div
+        [ngClass]="{ green: course1?.instructor, red: true, underline: true }"
+      >
+        Instructor name: {{ course1?.instructor ? course1?.instructor : "TBA" }}
+      </div>
+      <div *ngIf="course1?.instructor; else elseBlock">
+        Instructor name:
+        {{ course1?.instructor }}
+      </div>
+      <ng-template #elseBlock>Instructor to be determined</ng-template>
+      <div>
+        Max students:{{ course1?.size }}
+        <span [ngSwitch]="course1?.size">
+          <span *ngSwitchCase="1 - 3">Limited Availability</span>
+          <span *ngSwitchCase="12"> Open to All</span>
+          <span *ngSwitchDefault>Normal Amount</span>
+        </span>
+        <br />
+        Total hours: {{ course1?.hours | addHours }}
+        <br />
+        <span *ngIf="course1?.hours">
+          Total minutes:
+          {{ course1.hours | showMinutes }}</span
+        ><br />
+        Price: {{ course1?.price | currency: "CA$" }}
+        <br />
+        Price with normal format: {{ course1?.price | currency: "USD" }}
+        <br />
+        Price with EUR format: {{ course1?.price | currency: "EUR" }}
+      </div>
+      <div *ngIf="course1?.movie">
+        Favorite Movie: {{ course1.movie["favorite movie"] }}
+        <img [src]="course1.movie.image" />
+      </div>
+      <a [routerLink]="['../courses/' + course1.id]">More details</a>
+      <button (click)="handleClick()">Click me!</button>
+      <div class="cal" [id]="'course' + course1?.id"></div>
+    </div>
+  </collapsible-well>
 </div>
